files/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apache
spec:
  rules:
  - host: apache.dragonfly.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: apache
          servicePort: 80
